[package]
name = "announce-deployment-to-slack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
ureq = { version = "2.4.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
